# fhir-proxy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
fhir_proxy/: cache.py  main.py
fhir_proxy/cache/: __init__.py  redis_cache.py
fhir_proxy/config/: __init__.py  base.py
fhir_proxy/routers/: fhir_api.py  simple.py
fhir_proxy/services/: README.md
fhir_proxy/types/: simple.py
scripts/: redis_cycle.sh
tests/load/: healthcheck.js
tests/unit/: test_cache.py
