[tool.poetry]
name = "fhir-proxy"
version = "0.1.0"
description = ""
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fhir-resources = "^7.0.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
redis = "^5.0.1"
requests = "^2.31.0"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
