[tool.poetry]
name = "fhir-proxy"
version = "0.1.0"
description = ""
authors = ["Fraser Isbester <fraserisbester@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fhir-resources = "^7.0.2"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
redis = "^5.0.1"
httpx = "^0.25.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
ruff = "^0.1.4"
black = "^23.10.1"
autoimport = "^1.3.3"



[tool.poetry.group.fhir-tools.dependencies]
fhirpathpy = "^0.2.2"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length=100
indent-width = 4

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
